--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,2 @@
-1. Understand the basic concepts and major components of the computer motherboard
-2. Create a roadmap plan given this project may take a month to complete.
+1. Complete the major compoenets of the Compaq 6510b motherboard
+
