--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,3 @@
 1. Complete the major compoenets of the Compaq 6510b motherboard
-
+2. Go over the Smaller parts that are all over the motherboard
+    - 
